--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SeacrhAnim</string>
+    <string name="label_sourcePoint">Source point</string>
+    <string name="label_destinationPoint">Destination point</string>
 </resources>
