--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">SeacrhAnim</string>
     <string name="label_sourcePoint">Source point</string>
     <string name="label_destinationPoint">Destination point</string>
+    <string name="label_instructions">Choose source and destination\npoints to start search</string>
 </resources>
